--- a/style.css
+++ b/style.css
@@ -1,22 +1,81 @@
 *{
-    margin:0px;
+    margin: 0;
 }
+
+body{
+    display: grid;
+    grid-template-areas: 'nav nav nav nav'
+                        'header header header header'
+                        'cont1 cont1 cont1 cont1'
+                        'cont2 cont2 cont2 cont2'
+                        'cont3 cont3 cont3 cont3'
+                        'footer footer footer footer';
+    grid-template-rows: 5px 78.9vh 44vh 56vh 60vh 17vh;
+    grid-template-columns: 25vw 25vw 25vw 25vw;
+}
+/* body::-webkit-scrollbar{
+    width: 0px;
+    background:transparent;
+} */
 
 nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: rgb(198, 241, 3);
-    height: 50px;
+    grid-area: nav;
+    background-color: #2CBF60;
     width: 100%;
+    height: 5px;
 }
-
-nav p{
-
-}
-
 header{
-    background-color: rgb(248, 174, 37);
-    height: 40ex;
-    width: 100%;
+    grid-area: header;
+    background-color: yellow;
+    background-image: url("imagens/banner.png");
+    display: flex;
+}
+
+.text{
+    position: relative;
+    top:30%;
+    left: 20%;
+    align-items: center;
+    width: 50%;
+    color:white;
+
+}
+
+.text h1{
+    display: block;
+    font-size: 40px;
+}
+
+.text p{
+    font-size: 23px;
+    margin-top: 37px;
+    width: 65%;
+}
+
+.cell{
+    width: 50%;
+}
+
+
+.cont1{
+    grid-area: cont1;
+    background-color: purple;
+}
+
+
+.cont2{
+    grid-area: cont2;
+    background-color: green;
+}
+
+
+.cont3{
+    grid-area: cont3;
+    background-color: blue;
+}
+
+
+footer{
+    grid-area: footer;
+    background-color: red;
 }
